2013-02-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c src/boundary.c src/boundary.h src/Makefile.am:
	graphics.c has grown into the largest single gnuplot source file
	(7000+ lines).  Split out the routines dealing with key and border
	layout into a new separate file boundary.c.

	* src/color.c src/pm3d.c src/interpol.c:
	Remove unneeded #include headers.

	* src/axis.c src/gadgets.c src/gadgets.h src/graphics.c src/graphics.h
	(label_width):  Move routine label_width() from graphics.c to gadgets.c.

	* src/graphics.c src/graphics.h src/gadgets.h src/gadgets.c
	src/util3d.h src/pm3d.c:  Move routine apply_head_properties() from
	graphics.c to gadgets.c.

2013-02-26  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Simplify description of binary file handling.
	Do not imply that text files are limited to ascii encoding.

	* docs/old/makefile.r: Remove ancient version of makefile.

	* configure.in src/Makefile.am man/lasergnu.1 man/Makefile.am
	src/lasergnu: Remove ancient script that piped a file through gnuplot
	and then via lpr to a (by default Imagen) printer. This script has
	been deprecated since version 4.0.

	* configure.in src/term.h:  Remove imagen (1980s/1990s laser printer)
	from default set of included terminals.

	* src/show.c src/version.c src/version.h src/plot.c:
	Remove the "Build system" line from the version information shown on
	entry.  It never did report the build system, only the system reported
	by the machine it was currently running on.   Could be replaced if
	someone wants to figure out a generic way to have autoconf fill in the
	OS definition in syscfg.h

2013-02-24  Ethan A Merritt  <merritt@u.washington.edu>

	* term/aquaterm.trm:  Revert patch of 24-Apr-2012 because it breaks
	rgbimage with aquaterm 1.1.  Reversion confirmed to fix the problem
	by Alexander Hansen of Fink.
	Bug #1188

2013-02-22  Ethan A Merritt  <merritt@u.washington.edu>
